src/css/shape.module.css
.top {
    top: 0;
}

.bottom {
    bottom: 0;
    transform: rotate(180deg);
}

.shape {
    position: relative;
    left: 0;
    width: 100%;
    height: 6vw;
    overflow: hidden;
    line-height: 0;
}

.wave svg {
    position: relative;
    display: block;
    width: 150%;
    height: 5vw;
    transition: color 0.33s;
}

.arrow svg {
    position: relative;
    display: block;
    width: 100%;
    height: 10vw;
    transition: color 0.33s;
}

